# pydantic_tfl_api

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  RELEASE_FLOW.md  ROBUSTNESS_IMPLEMENTATION.md  build.sh  build_models.py  example.py  pyproject.toml  renovate.json
.devcontainer/: devcontainer.json
.github/workflows/: build_and_publish.yml  bump_version.yml  deploy_build_artifact.yaml  deploy_bump_version.yml  deploy_to_pypi.yml  deploy_workflow_wrapper.yml  fetch_tfl_specs.yml  sync_release.yml  test_build_bump_version.yml  test_close_pr.yaml  test_codeql.yml  test_dependency_review.yml  test_run_pytest.yml  test_workflow_wrapper.yml
build_script/: build.sh  build_models.py  mappings.py
data/: tfl_mappings.json
docs/: DEPENDENCY_STRATEGY.md
infrastructure/core/: __init__.py  async_client.py  client.py  http_client.py  package_models.py  response.py  rest_client.py
infrastructure/core/http_backends/: __init__.py  requests_client.py
pydantic_tfl_api/: __init__.py  class_diagram.mmd  client.py  config.py  py.typed  rest_client.py
pydantic_tfl_api/core/: __init__.py  async_client.py  client.py  http_client.py  package_models.py  rest_client.py
pydantic_tfl_api/core/http_backends/: __init__.py  requests_client.py
pydantic_tfl_api/endpoints/: AccidentStatsClient.py  AirQualityClient.py  BikePointClient.py  CrowdingClient.py  JourneyClient.py  LiftDisruptionsClient.py  LineClient.py  ModeClient.py  OccupancyClient.py  PlaceClient.py  RoadClient.py  SearchClient.py  StopPointClient.py  VehicleClient.py  __init__.py
pydantic_tfl_api/models/: AccidentDetail.py  AccidentDetailArray.py  ActiveServiceType.py  ActiveServiceTypesArray.py  AdditionalProperties.py  ArrivalDeparture.py  ArrivalDepartureArray.py  Bay.py  BikePointOccupancy.py  BikePointOccupancyArray.py  CarParkOccupancy.py  Casualty.py  ChargeConnectorOccupancy.py  ChargeConnectorOccupancyArray.py  Crowding.py  DbGeography.py  DbGeographyWellKnownValue.py  Disambiguation.py  DisambiguationOption.py  DisruptedPoint.py  DisruptedPointArray.py  Disruption.py  DisruptionArray.py  Fare.py  FareCaveat.py  FareTap.py  FareTapDetails.py  GenericResponseModel.py  Identifier.py  Instruction.py  InstructionStep.py  Interval.py  ItineraryResult.py  Journey.py  JourneyFare.py  JourneyPlannerCycleHireDockingStationData.py  JourneyVector.py  JpElevation.py  KnownJourney.py  Leg.py  (+81 more)
schemas/: tfl_mappings_schema.json
scripts/: LEGACY_DO_NOT_USE_build_models.py  __init__.py  build.sh  build_models.py  build_with_coordinator.py  compare_specs.py  determine-version-bump.sh  determine_version_bump.py  fetch_tfl_specs.py  mapping_loader.py  mappings.py
scripts/build_system/: __init__.py  build_coordinator.py  client_generator.py  dependency_resolver.py  file_manager.py  model_builder.py  spec_processor.py  utilities.py
src/: __init__.py  client.py
src/models/: __init__.py  package_models.py
tests/: __init__.py  config_for_tests.py  store_tfl_status.py  test_Line_client_connects_to_tfl.py  test_basic_functionality.py  test_basic_tests.py  test_build_integration.py  test_build_models.py  test_build_models_refactored.py  test_client.py  test_determine_version_bump.py  test_endpoints.py  test_error_handling.py  test_http_client_abstraction.py  test_httpx_support.py  test_mappings.py  test_mappings_compatibility.py  test_mappings_schema.py  test_package_install.py  test_pydantic_models.py  test_version_bump_integration.py
tests/test_build_system/: __init__.py  test_build_coordinator.py  test_client_generator.py  test_deduplication.py  test_dependency_resolver.py  test_file_manager.py  test_model_builder.py  test_spec_processor.py  test_utilities.py
tests/tfl_responses/: arrivalsByLineId_1_4_None_Prediction.json  arrivalsByLineId_1_4_None_Prediction_expected.json  arrivalsByLineId_victoria_None_Prediction.json  arrivalsByLineId_victoria_None_Prediction_expected.json  lineDisruptionsByLineId_14_None_Line.json  lineDisruptionsByLineId_piccadilly_None_Line.json  lineDisruptionsByLineId_victoria_None_Line.json  lineDisruptionsByLineId_victoria_northern_None_Line.json  lineDisruptionsByMode_tube_None_Line.json  lineDisruptionsByMode_tube_overground_None_Line.json  lineMetaModes_None_None_Mode.json  lineStatusByMode_tube_None_Line.json  lineStatusByMode_tube_overground_None_Line.json  lineStatusBySeverity_0_None_Line.json  lineStatusBySeverity_0_None_Line_expected.json  lineStatusBySeverity_10_None_Line.json  lineStatusBySeverity_10_None_Line_expected.json  lineStatusBySeverity_3_None_Line.json  lineStatusBySeverity_3_None_Line_expected.json  lineStatusBySeverity_5_None_Line.json  lineStatus_piccadilly_None_Line.json  lineStatus_piccadilly_None_Line_expected.json  lineStatus_piccadilly_northern_None_Line.json  linesByLineId_victoria_None_Line.json  linesByMode_overground_None_Line.json  routeByLineIdWithDirection_14_outbound_None_Line.json  routeByLineIdWithDirection_14_outbound_None_Line_expected.json  routeByLineIdWithDirection_northern_all_None_Line.json  routeByLineIdWithDirection_northern_all_None_Line_expected.json  routeByLineIdWithDirection_victoria_inbound_None_Line.json  routeByLineId_1415_None_Line_expected.json  routeByLineId_14_None_Line.json  routeByLineId_victoria_None_Line.json  routeByMode_tube_None_Line.json  routeByMode_tube_overground_None_Line.json  routeByMode_tube_serviceTypes_night_Line.json  stopPointById_940GZZLUASL_940GZZLUHAW_None_StopPoint.json  stopPointById_940GZZLUASL_None_StopPoint.json  stopPointByMode_overground_None_StopPointsResponse.json  stopPointByMode_overground_None_StopPointsResponse_expected.json  (+6 more)
